--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -16,8 +16,7 @@
 }
 
 .defaultView-field-container {
-  overflow-y: scroll;
-  width: 80%;
+  width: 90%;
   height: 90%;
   background-color: white;
   border-radius: 20px;
@@ -34,6 +33,11 @@
   font-weight: bolder;
   font-style: italic;
   font-size: 2.5vh;
+}
+
+.descriptionView {
+  height: 30%;
+  overflow-y: scroll;
 }
 
 .imgGrid {
@@ -95,6 +99,7 @@
   .descriptionView {
     grid-column: 1;
     grid-row: 3;
+    height: 100%;
   }
 
   .geolocationView {
