--- a/frontend/src/pages/DefaultsUser/DefaultsUser.css
+++ b/frontend/src/pages/DefaultsUser/DefaultsUser.css
@@ -4,16 +4,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: rgb(0, 17, 43);
 }
 
-.problem-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(0, 17, 43);
-  overflow-y: scroll;
-  gap: 20px;
+.profileDefaultsUser,
+.loginDefaultsUser,
+.adminOffDefaultsUser,
+.logoutDefaultsUser {
+  display: none;
 }
 
 .backDefaultsUser {
@@ -24,20 +22,29 @@
   transition-duration: 0.5s;
 }
 
-.profileDefaultsUser,
-.loginDefaultsUser,
-.adminOffDefaultsUser,
-.logoutDefaultsUser {
-  display: none;
-}
-
-.btnCard {
+.problem-containerOn,
+.problem-containerOff {
+  height: 100%;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  margin: 15px;
+  flex-direction: column;
+  overflow-y: scroll;
+  gap: 22px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.delete-button-defaultUser {
+.defaultUserEmpty {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  gap: 40px;
+}
+
+.delete-button-defaultsUser {
   color: rgb(213, 43, 30);
   font-weight: bold;
   border-radius: 20px;
@@ -46,11 +53,11 @@
   margin: 5px;
 }
 
-.delete-button-defaultUser:hover {
+.delete-button-defaultsUser:hover {
   background-color: rgb(213, 43, 30);
   color: white;
   height: 1.5em;
-  width: 8rem;
+  width: 10rem;
 }
 
 .update-button-defaultsUser {
@@ -59,6 +66,7 @@
   border-radius: 20px;
   height: 1.5em;
   width: 8rem;
+  margin: 5px;
 }
 
 .update-button-defaultsUser:hover {
@@ -69,16 +77,9 @@
 }
 
 @media (min-width: 768px) {
-  .problem-container {
-    height: 100%;
-    width: 100%;
+  .problem-containerOn {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(auto, auto);
-    background-color: rgb(0, 17, 43);
-    overflow-y: scroll;
-    gap: 22px;
-    padding-top: 10px;
-    padding-bottom: 10px;
   }
 }
