--- a/frontend/src/pages/Users/Users.css
+++ b/frontend/src/pages/Users/Users.css
@@ -7,6 +7,12 @@
   background-color: rgb(0, 17, 43);
 }
 
+.profileUsers,
+.loginUsers,
+.logoutUsers {
+  display: none;
+}
+
 .backUsers {
   margin-top: 5px;
   margin-left: 5px;
@@ -15,35 +21,41 @@
   transition-duration: 0.5s;
 }
 
-.profileUsers,
-.loginUsers,
-.logoutUsers {
-  display: none;
-}
-
 .users-display {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  overflow: auto;
-  gap: 50px;
-  align-items: center;
-}
-.mapUser-container {
-  width: 100%;
+  overflow-y: scroll;
+  gap: 22px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
+/* .mapUser-container {
+  width: 100%;
+} */
+
 .deleteUser-button {
-  margin-top: 5px;
-  color: rgba(205, 0, 55);
+  color: rgb(213, 43, 30);
+  font-weight: bold;
+  border-radius: 20px;
+  height: 1.5em;
+  width: 8rem;
+  margin: 5px;
 }
-@media (min-width: 900px) {
+
+.deleteUser-button:hover {
+  background-color: rgb(213, 43, 30);
+  color: white;
+  height: 1.5em;
+  width: 10rem;
+}
+
+@media (min-width: 768px) {
   .users-display {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(auto, auto);
-    padding: 10px;
   }
 }
