--- a/frontend/src/pages/Ter/Ter.css
+++ b/frontend/src/pages/Ter/Ter.css
@@ -42,23 +42,34 @@
   height: 80%;
 }
 
-.pictureTerOff {
+.pictureTerOff,
+.loadingTerOff {
   display: none;
 }
 
 .pictureTerPopup {
   width: 90%;
 }
+
+.pictureDefaultTer {
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .sendTer {
   color: rgb(205, 0, 55);
   font-weight: bold;
 }
+
 @media (min-width: 900px) {
   .inputTerImg {
     width: auto;
     display: flex;
     justify-content: center;
   }
+
   .textTer {
     height: 28vh;
     width: 400px;
@@ -71,12 +82,14 @@
     align-items: center;
     justify-content: center;
   }
+
   .h1Animation {
     grid-column: 1/4;
     grid-row: 1;
     animation: scale-in-ver-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
       1.9s both;
   }
+
   .inputTerOne {
     grid-column: 1;
     grid-row: 2;
@@ -84,25 +97,29 @@
     justify-content: center;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
   }
+
   .inputTerTwo {
     grid-column: 1;
     grid-row: 3/5;
     align-items: center;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
+
   .inputTerThree {
     grid-column: 3;
     grid-row: 2;
     animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.2s
       both;
   }
+
   .inputTerFour {
     grid-column: 3;
     grid-row: 3;
     animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s
       both;
   }
-  .pictureDefault {
+
+  .pictureDefaultTer {
     grid-column: 3;
     grid-row: 4;
     height: 80%;
@@ -111,6 +128,7 @@
     animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s
       both;
   }
+
   .latitudeLongitude {
     justify-content: space-evenly;
     grid-column: 3;
@@ -121,7 +139,7 @@
   }
 
   .inputTerFive {
-    grid-column: 2;
+    grid-column: 1/4;
     grid-row: 6;
     animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
       both;
@@ -143,6 +161,7 @@
       opacity: 1;
     }
   }
+
   @keyframes scale-in-ver-center {
     0% {
       -webkit-transform: scaleY(0);
