--- a/frontend/src/pages/UpdateDefaultUser/UpdateDefaultUser.css
+++ b/frontend/src/pages/UpdateDefaultUser/UpdateDefaultUser.css
@@ -6,9 +6,11 @@
   justify-content: space-between;
   background-color: rgb(0, 17, 43);
 }
+
 .inputUpdateImage {
   color: white;
 }
+
 .profileUpdateDefaultUser,
 .loginUpdateDefaultUser,
 .adminOffUpdateDefaultUser,
@@ -40,6 +42,17 @@
 .pictureUpdateOn,
 .imgUpdate {
   width: 30%;
+}
+
+.loadingUpdateOff {
+  display: none;
+}
+
+.pictureUpdateDefaultUser {
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 @media (min-width: 900px) {
@@ -121,7 +134,7 @@
   }
 
   .inputUpdateDefaultUserFive {
-    grid-column: 2;
+    grid-column: 1/4;
     grid-row: 6;
     animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
       both;
