--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -36,28 +36,41 @@
   height: 80%;
 }
 
-.pictureTgvOff {
+.pictureTgvOff,
+.loadingTgvOff {
   display: none;
 }
 
 .pictureTgvPopup {
   width: 90%;
 }
+
+.pictureDefaultTgv {
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .sendVoyageurs {
   color: rgb(205, 0, 55);
   font-weight: bold;
 }
+
 @media (min-width: 900px) {
   .inputVoyageursImg {
     width: auto;
   }
+
   .textVoyageurs {
     height: 28vh;
     width: 400px;
   }
+
   .latitudeLongitude {
     justify-content: space-evenly;
   }
+
   .voyageursField-container {
     display: grid;
     grid-template-columns: 43% 10% 43%;
@@ -65,12 +78,14 @@
     align-items: center;
     justify-content: center;
   }
+
   .h1Animation {
     grid-column: 1/4;
     grid-row: 1;
     animation: scale-in-ver-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
       1.9s both;
   }
+
   .inputVoyageurOne {
     grid-column: 1;
     grid-row: 2;
@@ -78,25 +93,29 @@
     justify-content: center;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
+
   .inputVoyageurTwo {
     grid-column: 1;
     grid-row: 3/5;
     align-items: center;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
   }
+
   .inputVoyageurThree {
     grid-column: 3;
     grid-row: 2;
     animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s
       both;
   }
+
   .inputVoyageurFour {
     grid-column: 3;
     grid-row: 3;
     animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s
       both;
   }
-  .pictureDefault {
+
+  .pictureDefaultTgv {
     grid-column: 3;
     grid-row: 4;
     height: 80%;
@@ -105,6 +124,7 @@
     animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s
       both;
   }
+
   .latitudeLongitude {
     grid-column: 3;
     grid-row: 5;
@@ -114,7 +134,7 @@
   }
 
   .inputVoyageurFive {
-    grid-column: 2;
+    grid-column: 1/4;
     grid-row: 6;
     animation: scale-in-ver-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.9s
       both;
@@ -149,6 +169,7 @@
       opacity: 1;
     }
   }
+
   @keyframes scale-in-ver-center {
     0% {
       -webkit-transform: scaleY(0);
